differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr79428-3.c-5.4.0-1.out.txt
pr79428-3.c:3:9: error: ‘#pragma GCC pch_preprocess’ must be first before ‘#pragma’
 #pragma GCC pch_preprocess  
         ^
